# customaggregator

./: .gitignore  README.md  cleanup_failed_articles.py  crawler_cli.py  main.py  migrate_db.py  migrate_themes.py  pyproject.toml  reset_tables.py  run_server.py  test_crawler.py
src/crawleb/crawler/: company_researcher.py  crawler.py  extractor.py  trending_analyzer.py
src/crawleb/database/: database.py  models.py
src/crawleb/llm/: databricks_client.py
src/crawleb/web/: app.py  job_status.py
static/css/: styles.css
templates/: base.html  companies.html  company_profile.html  config.html  home.html  registry.html  theme_articles.html  topics.html  trending.html
